name:                hmbot
version:             0.1.0.0
synopsis:            A slack bot for retrieving MTG card data.
description:         Please see README.md
homepage:            http://github.com/nuttycom/hmbot#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Nuttycombe
maintainer:          kris@nutty.land
copyright:           2016 Kris Nuttycombe
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HmBot
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , lens
                     , lens-aeson
                     , either
                     , errors
                     , mtl
                     , parsec
                     , semigroups
                     , scotty
                     , text
                     , transformers
                     , wai
                     , wreq
  default-language:    Haskell2010

executable hmbot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hmbot
  default-language:    Haskell2010

test-suite hmbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hmbot
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nuttycom/hmbot
